--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <body>
 
     <div class="container">
-        <h1>租房定金收据生成器</h1>
+        <h1>租房定金收据</h1>
         <div class="form-section">
             <h2>付款人信息</h2>
             <div class="form-grid">
